Finish 'createIdea' layout and fix layout bugs

--- a/ideaboard_app/app/globals.css
+++ b/ideaboard_app/app/globals.css
@@ -27,6 +27,11 @@
   }
 }
 
+* {
+  min-width: 0;
+  min-height: 0;
+}
+
 html, body {
   background: var(--background);
   color: var(--foreground);
@@ -35,4 +40,14 @@ html, body {
   font-size: 16px;
   border: var(--border);
   border-radius: var(--border-radius);
+}
+
+.ant-tabs-content, .ant-tabs-content-holder, .ant-tabs-tabpane {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+}
+
+.ant-tabs-nav-list, .ant-tabs-tab {
+  min-width: initial;
 }
